@@ -183,4 +183,15 @@ class RemoteSecurePayAuTest < Test::Unit::TestCase
     assert_failure response
     assert_equal "Invalid merchant ID", response.message
   end
+
+  def test_purchase_scrubbing
+    transcript = capture_transcript(@gateway) do
+      @gateway.purchase(@amount, @credit_card, @options)
+    end
+    transcript = @gateway.scrub(transcript)
+
+    assert_scrubbed(credit_card.number, transcript)
+    assert_scrubbed(@gateway.options[:login], transcript)
+    assert_scrubbed(@gateway.options[:password], transcript)
+  end
 end
